<resources>

    <string name="interest">Interests :</string>
    <string name="availability">Availability :</string>
    <string name="title_activity_camer">Camer</string>
        <string name="app_name">Urban Roots</string>
        <string name="action_settings">Settings</string>
        <string name="sign_up">Name :</string>
        <string name="email">Email :</string>
        <string name="mobile">Mobile :</string>
        <string name="postcode">Postcode :</string>
        <string name="title_activity_report">ReportActivity</string>
        <string name="report_issue">Report Issue</string>
        <string name="register">Register</string>
        <string name="title_activity_sign_up">sign_up</string>
        <string name="date_button_set">Set Date</string>
        <string name="date_view_set">Selected date: </string>
        <string name="date_selected"></string>
    </resources>

